# prettymol

./: .envrc  .gitignore  Basics.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  pixi.toml  pyproject.toml  rdkit_compat.py
.github/workflows/: docs.yaml  pypi.yaml
docs/: _quarto.yml  api.qmd  examples.qmd  index.qmd  materials.qmd  selections.qmd  styles.qmd
docs/examples/: molstar.qmd
docs/index_files/libs/bootstrap/: bootstrap-9612fbd22e2882e697818be60945fc49.min.css
scripts/: AnimationTest.qmd  Basics.ipynb  GFP.qmd
src/prettymol/: __init__.py  cli.py  color.py  compositing.py  core.py  lighting.py  materials.py  molecule.py  repltools.py  selection_functions.py  selections.py  styledata.py  styles.py
tests/: conftest.py  test_basic.py  test_cli.py  test_converter.py  test_materials.py
